iter_language/tests/corpus/invalid/queue-sqs-conflicting-identity.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: queue-sqs-conflicting-identity.iter
---
Error: queue sqs: `queue_url` and `queue_name`/`account_id` are mutually exclusive
   ╭─[queue-sqs-conflicting-identity.iter:1:7]
   │
 1 │ queue sqs {
   │       ─┬─  
   │        ╰─── queue sqs: `queue_url` and `queue_name`/`account_id` are mutually exclusive
   │ 
   │ Help: set either `queue_url` OR both `queue_name` and `account_id`
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[queue-sqs-conflicting-identity.iter:1:1]
   │
 1 │ queue sqs {
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
